--- a/sprout/appliances/templates/password.html
+++ b/sprout/appliances/templates/password.html
@@ -9,7 +9,7 @@
         </div>
 {% endif %}
 
-<form method="post" action="{% url 'password_change' %}" class="form-signin">
+<form method="post" action="{% url 'appliances:password_change' %}" class="form-signin">
     {% csrf_token %}
     <h2 class="form-signin-heading">Please enter your old and new password</h2>
     <label for="inputOldPassword" class="sr-only">Old password</label>
