--- a/sprout/appliances/templates/base.html
+++ b/sprout/appliances/templates/base.html
@@ -34,40 +34,40 @@
       <ul class="nav navbar-nav navbar-primary">
         <li id="home">
         
-        <a href="{% url 'index' %}"><span class="glyphicon glyphicon-home"></span></a>
+        <a href="{% url 'appliances:index' %}"><span class="glyphicon glyphicon-home"></span></a>
         </li>
         <li id="api">
-          <a href="{% url 'jsonapi_doc' %}">API Reference</a>
+          <a href="{% url 'appliances:jsonapi_doc' %}">API Reference</a>
         </li>
         {% if user.is_authenticated %}
             <li id="bugs">
-              <a href="{% url 'view_bug_queries' %}">Bugs</a>
+              <a href="{% url 'appliances:view_bug_queries' %}">Bugs</a>
             </li>
             <li id="providers">
-              <a href="{% url 'providers' %}">Providers</a>
+              <a href="{% url 'appliances:providers' %}">Providers</a>
             </li>
             <li id="provider_usage">
-              <a href="{% url 'provider_usage' %}">Provider usage</a>
+              <a href="{% url 'appliances:provider_usage' %}">Provider usage</a>
             </li>
             <li id="templates">
-              <a href="{% url 'templates' %}">Templates</a>
+              <a href="{% url 'appliances:templates' %}">Templates</a>
             </li>
             <li id="swap_offenders">
-              <a href="{% url 'swap_offenders' %}">Swap</a>
+              <a href="{% url 'appliances:swap_offenders' %}">Swap</a>
             </li>
             <li id="appliances">
-              <a href="{% url 'my_appliances' %}">My Appliances</a>
+              <a href="{% url 'appliances:my_appliances' %}">My Appliances</a>
             </li>
             <li id="shepherd">
-              <a href="{% url 'shepherd' %}">Free appliance shepherd</a>
+              <a href="{% url 'appliances:shepherd' %}">Free appliance shepherd</a>
             </li>
         {% endif %}
         {% if user.is_staff or user.is_superuser %}
             <li id="template_configurations">
-              <a href="{% url 'template_configurations' %}">Template configurations</a>
+              <a href="{% url 'appliances:template_configurations' %}">Template configurations</a>
             </li>
             <li id="vms">
-              <a href="{% url 'vms_default' %}">VM Manager</a>
+              <a href="{% url 'appliances:vms_default' %}">VM Manager</a>
             </li>
             <li id="admin">
               <a href="{% url 'admin:index' %}">Admin page</a>
@@ -100,14 +100,14 @@
                   </a>
                 </li>
                 <li>
-                    <a href="{% url 'password_change' %}?next={{request.path}}" title="Change password" style="color: #333;">Change password</a>
+                    <a href="{% url 'appliances:password_change' %}?next={{request.path}}" title="Change password" style="color: #333;">Change password</a>
                 </li>
                 <li>
-                    <a href="{% url 'logout' %}" title="Logout" style="color: #333;">Logout, {{ user|user_repr }}</a>
+                    <a href="{% url 'appliances:logout' %}" title="Logout" style="color: #333;">Logout, {{ user|user_repr }}</a>
                 </li>
             {% else %}
                 <li>
-                    <a href="{% url 'login' %}?next={{request.path}}" title="Login" style="color: #333;">Login</a>
+                    <a href="{% url 'appliances:login' %}?next={{request.path}}" title="Login" style="color: #333;">Login</a>
                 </li>
             {% endif %}
       </ul>
