--- a/sprout/appliances/templates/login.html
+++ b/sprout/appliances/templates/login.html
@@ -9,7 +9,7 @@
         </div>
 {% endif %}
 
-<form method="post" action="{% url 'django.contrib.auth.views.login' %}" class="form-signin">
+<form method="post" action="{% url 'appliances:login' %}" class="form-signin">
     {% csrf_token %}
     <h2 class="form-signin-heading">Please sign in</h2>
     <label for="inputUsername" class="sr-only">Email address</label>
